feat: add endpoint for returning active plugins + docs
