# config/delivery/http/config_handler.go
@@ -3,12 +3,14 @@ package http
 import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/log-rush/distribution-server/pkg/app"
+	logRush "github.com/log-rush/server-devkit/v2"
 )
 
 type configHandler struct {
-	version string
-	name    string
-	id      string
+	version       string
+	name          string
+	id            string
+	routerPlugins *[]logRush.Plugin
 }
 
 type InfoResponse struct {
@@ -17,14 +19,20 @@ type InfoResponse struct {
 	Name    string `json:"name"`
 }
 
+type PluginsResponse struct {
+	RouterPlugins []string `json:"routerPlugins"`
+}
+
 func NewConfigHttpHandler(context *app.Context) {
 	handler := configHandler{
-		version: context.Config.Version,
-		name:    context.Config.Name,
-		id:      context.Config.ServerID,
+		version:       context.Config.Version,
+		name:          context.Config.Name,
+		id:            context.Config.ServerID,
+		routerPlugins: context.Plugins.RouterPlugins,
 	}
 
 	context.Server.Get("/info", handler.getInfo)
+	context.Server.Get("/meta/plugins", handler.getPlugins)
 }
 
 // get Info godoc
@@ -40,5 +48,24 @@ func (h *configHandler) getInfo(c *fiber.Ctx) error {
 		Version: h.version,
 		Name:    h.name,
 		ID:      h.id,
+	})
+}
+
+// get Plugins godoc
+// @ID meta-plugins
+// @Router /meta/plugins [get]
+// @Tags system
+// @Description get info about the used plugins
+// @Summary get activates plugins
+// @Produce json
+// @Success 200 {object} PluginsResponse
+func (h *configHandler) getPlugins(c *fiber.Ctx) error {
+	plugins := []string{}
+	for _, plugin := range *h.routerPlugins {
+		plugins = append(plugins, plugin.Name())
+	}
+
+	return c.Status(200).JSON(PluginsResponse{
+		RouterPlugins: plugins,
 	})
 }
